Fixed email contact alignment

--- a/src/css/contact_us/contact_us_layout.css
+++ b/src/css/contact_us/contact_us_layout.css
@@ -120,8 +120,9 @@ legend {
         padding: 0.5em;
     }
 
-    #contact-email {
+    #contact-email fieldset {
         width: 50%;
+        margin: auto;
     }
 
     #contact-email input{
